fix login input bug, z-index issue and update suggestion deselect

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -70,8 +70,7 @@ login {
     }
 
     .bg-pattern {
-        position: fixed;
-        z-index: -1;
+        position: absolute;
         bottom: 15%;
         right: 0;
     }
